@@ -1287,10 +1287,14 @@ def removeFile(cfg, filename, repos=None):
         log.error("file %s is not under management" % filename)
         return 1
 
-    # we don't remove the file here; we mark it as autosource instead. the
-    # commit will remove it if need be or commit it as autosource if that's
-    # what's needed
-    state.fileIsAutoSource(pathId, set = True)
+    if version == versions.NewVersion():
+        # newly added file is being removed; go ahead and remove it now
+        state.removeFile(pathId)
+    else:
+        # we don't remove the file here; we mark it as autosource instead. the
+        # commit will remove it if need be or commit it as autosource if that's
+        # what's needed
+        state.fileIsAutoSource(pathId, set = True)
 
     if util.exists(filename):
         sb = os.lstat(filename)
